--- a/Style.css
+++ b/Style.css
@@ -12,8 +12,8 @@ html {
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: #783e3e;
-    background-color: #fff6f6;
+    color: #c05252;
+    background-color: #6c5c5c;
 }
 
 .container {
@@ -47,10 +47,10 @@ b{
 @keyframes abc{
             form 
             {
-            color: rgb(21, 235, 164);
+            color: rgb(19, 195, 136);
             }
             10%{
-               color: blue;
+               color: rgb(51, 51, 87);
                 transform:rotate(90deg);
             }
             20%{
